; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_ole2.c_get_stgmedium.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_ole2.c_get_stgmedium.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"cf %x not implemented\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @get_stgmedium to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_stgmedium(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %15 [
    i32 130, label %6
    i32 128, label %9
    i32 129, label %12
  ]

6:                                                ; preds = %2
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @create_dib(i32* %7)
  br label %18

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @create_mfpict(i32* %10)
  br label %18

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @create_emf(i32* %13)
  br label %18

15:                                               ; preds = %2
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @ok(i32 0, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %16)
  br label %18

18:                                               ; preds = %15, %12, %9, %6
  ret void
}

declare dso_local i32 @create_dib(i32*) #1

declare dso_local i32 @create_mfpict(i32*) #1

declare dso_local i32 @create_emf(i32*) #1

declare dso_local i32 @ok(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
